# scalac_ai_council

./: .gitignore  .pre-commit-config.yaml  PLATFORM_ADAPTERS.md  Plan Marketingowy Scalac.AI dla Agentów (2).md  README.md  WEBUI_ROADMAP.md  github_workflows_ci.yml  pyproject.toml  scalac_battlecards.docx.md  setup.cfg
.cursor/rules/: scalac-council.mdc
.github/agents/: david.agent.md  elena.agent.md  kai.agent.md  marcus.agent.md  scalac-council.agent.md
.github/workflows/: ci.yml  dashboard-smoke.yml  live-openrouter.yml
csv/: 200 Scala CTO's - Sheet1 (1).csv  Q1 2026 AI vacancies job postings to prospect - Sheet1 (2).csv  WIZA_CTO_Scala_groups_493112 - WIZA_CTO_Scala_groups_493112 (1).csv
scalac_ai_council/: .gitignore  INTEGRATION.md  KIMI_GUIDE.md  QUICKSTART.md  README.md  ROADMAP.md  github-push.sh  index.html  orchestrator.py  requirements-v2.5.txt  requirements-v2.txt  requirements-v3.txt
scalac_ai_council/AGENTS/david_lead_strategist/: system_prompt.md  tools.yaml
scalac_ai_council/AGENTS/david_lead_strategist/examples/: abm_campaign_fintech.md
scalac_ai_council/AGENTS/elena_funnel_architect/: system_prompt.md  tools.yaml
scalac_ai_council/AGENTS/elena_funnel_architect/examples/: 01_funnel_team_extension_core.md  02_funnel_sovereign_ai.md  funnel_team_extension.md
scalac_ai_council/AGENTS/kai_copywriter/: system_prompt.md  tools.yaml
scalac_ai_council/AGENTS/kai_copywriter/examples/: 01_landing_page_team_extension_core.md  02_case_study_liga_core.md  landing_page_team_extension.md
scalac_ai_council/AGENTS/marcus_offer_architect/: system_prompt.md  tools.yaml
scalac_ai_council/AGENTS/marcus_offer_architect/examples/: 01_team_extension_core.md  02_migration_project_core.md  03_sovereign_ai.md  04_core_ai_bundle.md  ai_capable_team.md  sovereign_ai_bank.md  team_extension_fintech.md
scalac_ai_council/AGENTS/sofia_content_strategist/: system_prompt.md  tools.yaml
scalac_ai_council/AGENTS/sofia_content_strategist/examples/: content_strategy_q1.md
scalac_ai_council/LEARNING/: book_study_guide.md  framework_update_process.md  post_mortem_template.md  quarterly_balance_review.md
scalac_ai_council/TOOLKIT/calculators/: pricing_calculator.md  roi_calculator.md
scalac_ai_council/TOOLKIT/checklists/: core_ai_diagnosis.md  launch_checklist.md  qa_checklist.md
scalac_ai_council/TOOLKIT/scripts/: demo_script.md  discovery_call_meddic.md
scalac_ai_council/TOOLKIT/templates/: brandscript_template.md  challenger_pitch.md  pricing_worksheet.md
scalac_ai_council/WORKFLOW/: handoff_templates.md  operating_system.yaml  project_workflows.yaml
scalac_ai_council/roadmap/: ARCHITECTURE.md  DECISION_LOG.md  PHASE_1_MEMORY.md  PHASE_2_TOOLS.md  PHASE_3_AUTONOMY.md  PHASE_4_ENTERPRISE.md
scalac_ai_council/scripts/: ingest_knowledge.py  migrate_to_v2.py  setup.py
scalac_ai_council/src/: __init__.py
scalac_ai_council/src/v2/: __init__.py
scalac_ai_council/src/v2/agents/: __init__.py
scalac_ai_council/src/v2/memory/: __init__.py
scalac_council/: ARCHITECTURE.md  README.md  orchestrator.py
scalac_council/agents/: david_agent.py  elena_agent.py  kai_agent.py  marcus_agent.py
scalac_council/shared/: brief.md
scalac_council_v2/: ARCHITECTURE.md  README.md  WEBINAR_GUIDE.md  orchestrator.py
scalac_council_v2/agents/: david_agent.py  elena_agent.py  kai_agent.py  kai_webinar.py  marcus_agent.py  marcus_agent_enhanced.py
scalac_council_v2/output/: FINAL_PROPOSAL.md
scalac_council_v2/prompts/: david_prompt.md  elena_prompt.md  kai_prompt.md  marcus_prompt.md
scalac_council_v2/shared/: brief.md  brief_webinar.md  brief_webinar_akka_agentic.md  content_plan.md  target_accounts.md
scalac_council_v2/shared/discussion/: round_1_david.md  round_1_elena.md  round_1_kai.md  round_1_marcus.md  round_2_david.md  round_2_elena.md  round_2_kai.md  round_2_marcus.md
src/council/: __main__.py  agent_runner.py  artifacts.py  cli.py  demo.py  interactive.py  review.py  schemas.py  service.py  structured.py
src/council/agents/: __init__.py  base.py  david.py  elena.py  kai.py  marcus.py  registry.py
src/council/agents/templates/: david.j2  elena.j2  kai.j2  marcus.j2
src/council/config/: __init__.py  documents.py  env_loader.py  loader.py  schema.py
src/council/llm/: __init__.py  anthropic_provider.py  claude_code_provider.py  cost_tracker.py  factory.py  kimi_code_provider.py  litellm_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  provider.py  retry.py  secrets.py
src/council/observability/: __init__.py  analysis.py  traces.py
src/council/orchestration/: __init__.py  barrier.py  orchestrator.py  state_machine.py
src/council/platform/: __init__.py  base.py  cli_adapter.py  copilot_adapter.py  cursor_adapter.py  idx_adapter.py  kimi_adapter.py  web_adapter.py
src/council/prompts/: __init__.py  generator.py
src/council/vis/: __init__.py  agent_meta.py  artifact_browser.py  dashboard.py
templates/companies/: consulting.json  ecommerce.json  fintech.json  saas.json  scalac.json
templates/companies/scalac_data/: scalac_brief_synthesized.md
tests/: conftest.py  test_agents.py  test_artifact_browser.py  test_artifacts.py  test_claude_code_provider.py  test_cli.py  test_config.py  test_dashboard.py  test_dashboard_textual.py  test_demo.py  test_documents.py  test_e2e.py  test_env_loader.py  test_factory.py  test_interactive.py  test_litellm_provider.py  test_llm.py  test_observability.py  test_orchestration.py  test_prompts.py  test_provider_contract.py  test_registry.py  test_schemas.py  test_secrets.py  test_service.py  test_streaming.py  test_structured.py
tests/live/: test_openrouter_live.py
