[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "council"
version = "3.2.0"
description = "Universal AI Marketing Council v3.0 - Multi-agent marketing strategy system"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "ScalaC Team", email = "team@scalac.io"},
]
keywords = ["ai", "marketing", "multi-agent", "async", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.1.0",
    "aiohttp>=3.9.0",
    "openai>=1.0",
    "anthropic>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.0",
    "pre-commit>=3.6.0",
    "types-aiohttp",
]
ollama = [
    "aiohttp>=3.9.0",
]
dashboard = [
    "rich>=13.0",
]

[project.scripts]
council = "council.cli:main"

[project.urls]
Homepage = "https://github.com/ScalaC/universal-ai-marketing-council"
Repository = "https://github.com/ScalaC/universal-ai-marketing-council"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
council = ["agents/templates/*.j2"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
implicit_reexport = false
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ASYNC", # flake8-async
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ASYNC"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/council"]
branch = true
omit = [
    "*/__main__.py",
    "*/tests/*",
    "*/venv/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]

[tool.coverage.xml]
output = "coverage.xml"
