[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "council"
version = "3.3.0"
description = "Universal AI Marketing Council v3.3 - Multi-agent marketing strategy system"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "ScalaC Team", email = "team@scalac.io"},
]
keywords = ["ai", "marketing", "multi-agent", "async", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.1.0",
    "aiohttp>=3.9.0",
    "openai>=1.0",
    "anthropic>=0.20.0",
    "rich>=13.0",
    "textual>=0.52.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.0",
    "pre-commit>=3.6.0",
]
ollama = [
    "aiohttp>=3.9.0",
]
dashboard = [
    "rich>=13.0",
]

[project.scripts]
council = "council.cli:main"

[project.urls]
Homepage = "https://github.com/borek707/scalac_ai_council"
Repository = "https://github.com/borek707/scalac_ai_council"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
council = ["agents/templates/*.j2"]
"*" = ["templates/companies/*.json", "templates/companies/scalac_data/*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
implicit_reexport = false
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["council.interactive", "council.vis.dashboard", "council.cli"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["council.llm.openai_provider", "council.llm.claude_code_provider", "council.llm.openrouter_provider"]
warn_unused_ignores = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ASYNC", # flake8-async
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top — needed for conditional/lazy imports
    "N806",   # variable in function should be lowercase — false positive on type aliases
    "N818",   # exception name should end with Error — pre-existing naming
    "N814",   # camelcase import as non-camelcase — intentional re-exports
    "SIM117", # merge nested with — readability choice
    "SIM105", # use contextlib.suppress — readability choice
    "SIM201", # simplify not equal — readability choice
    "SIM110", # use generator in any/all — readability choice
    "B905",   # zip without strict — intentional
    "B904",   # raise from — pre-existing
    "B007",   # unused loop variable — pre-existing
    "E741",   # ambiguous variable name — pre-existing
    "F821",   # undefined name — false positive in conditional imports
    "F841",   # local variable assigned but never used — pre-existing
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short -m 'not live'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "live: calls real external LLM providers and requires API keys",
]

[tool.coverage.run]
source = ["src/council"]
branch = true
omit = [
    "*/__main__.py",
    "*/tests/*",
    "*/venv/*",
    "*/interactive.py",
    "*/vis/dashboard.py",
    "*/review.py",
    "*/agent_runner.py",
    "*/platform/kimi_adapter.py",
    "*/platform/web_adapter.py",
    "*/platform/cursor_adapter.py",
    "*/platform/idx_adapter.py",
    "*/platform/copilot_adapter.py",
    "*/cli.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]

[tool.coverage.xml]
output = "coverage.xml"
